--- a/staffpicks.html
+++ b/staffpicks.html
@@ -159,49 +159,49 @@
     <div class="story-grid" id="picks">
       <!-- Games -->
       <div class="story-card active" data-category="games">
-        <img src="images/cs-keyart.png">
+        <img src="CS keyart.png">
         <h3>Citizen Sleeper</h3>
         <small>Jump Over the Age / Fellow Traveller</small>
         <div class="card-overlay">A narrative RPG set in a post-capitalist space station.</div>
       </div>
       <div class="story-card active" data-category="games">
-        <img src="images/the-ascent-keyart.jpg">
+        <img src="the ascent keyart.jpg">
         <h3>The Ascent</h3>
         <small>Neon Giant</small>
         <div class="card-overlay">A twin-stick action RPG set in a cyberpunk megacity.</div>
       </div>
       <div class="story-card active" data-category="games">
-        <img src="images/ruiner-keyart.jpg">
+        <img src="ruiner keyart.jpg">
         <h3>Ruiner</h3>
         <small>Reikon Games</small>
         <div class="card-overlay">A brutal action shooter set in the year 2091.</div>
       </div>
       <div class="story-card active" data-category="games">
-        <img src="images/ghostrunner-keyart.jpg">
+        <img src="ghostrunner keyart.jpg">
         <h3>Ghostrunner</h3>
         <small>One More Level</small>
         <div class="card-overlay">A lightning-fast slasher set in a dystopian tower city.</div>
       </div>
       <div class="story-card active" data-category="games">
-        <img src="images/cp2077-keyart.jpg">
+        <img src="cp2077 keyart.jpg">
         <h3>Cyberpunk 2077</h3>
         <small>CD Projekt Red</small>
         <div class="card-overlay">An open-world RPG set in Night City.</div>
       </div>
       <div class="story-card active" data-category="games">
-        <img src="images/cloudpunk-keyart.jpg">
+        <img src="cloudpunk keyart.jpg">
         <h3>Cloudpunk</h3>
         <small>ION Lands</small>
         <div class="card-overlay">A neon-soaked delivery game through a vertical city.</div>
       </div>
       <div class="story-card active" data-category="games">
-        <img src="images/transistor-keyart.jpg">
+        <img src="transistor keyart.jpg">
         <h3>Transistor</h3>
         <small>Supergiant Games</small>
         <div class="card-overlay">A sci-fi action RPG with rich strategy and art.</div>
       </div>
       <div class="story-card active" data-category="games">
-        <img src="images/fc3-blood-dragon.jpg">
+        <img src="fc3 blood dragon.jpg">
         <h3>Far Cry 3: Blood Dragon</h3>
         <small>Ubisoft</small>
         <div class="card-overlay">A retro-futuristic parody of '80s action games.</div>
@@ -209,31 +209,31 @@
 
       <!-- Books -->
       <div class="story-card active" data-category="books">
-        <img src="images/neuromancer.png">
+        <img src="neuromancer.png">
         <h3>Neuromancer</h3>
         <small>William Gibson</small>
         <div class="card-overlay">The definitive cyberpunk novel that launched a genre.</div>
       </div>
       <div class="story-card active" data-category="books">
-        <img src="images/mirrorshades.jpg">
+        <img src="mirrorshades.jpg">
         <h3>Mirrorshades</h3>
         <small>Edited by Bruce Sterling</small>
         <div class="card-overlay">An anthology that defined the cyberpunk movement.</div>
       </div>
       <div class="story-card active" data-category="books">
-        <img src="images/pattern-recognition.jpg">
+        <img src="pattern recognition.jpg">
         <h3>Pattern Recognition</h3>
         <small>William Gibson</small>
         <div class="card-overlay">A post-9/11 exploration of identity, branding, and connection.</div>
       </div>
       <div class="story-card active" data-category="books">
-        <img src="images/cryptonomicon.jpg">
+        <img src="cryptonomicon.jpg">
         <h3>Cryptonomicon</h3>
         <small>Neal Stephenson</small>
         <div class="card-overlay">A sprawling tale of code, war, and information age power.</div>
       </div>
       <div class="story-card active" data-category="books">
-        <img src="images/synners.jpg">
+        <img src="synners.jpg">
         <h3>Synners</h3>
         <small>Pat Cadigan</small>
         <div class="card-overlay">A prescient look at digital identity and networked consciousness.</div>
@@ -241,19 +241,19 @@
 
       <!-- Film and TV -->
       <div class="story-card active" data-category="film">
-        <img src="images/cp-edgerunners.jpg">
+        <img src="cp edgerunners.jpg">
         <h3>Cyberpunk Edgerunners</h3>
         <small>Studio Trigger / CD Projekt</small>
         <div class="card-overlay">An anime spinoff of Cyberpunk 2077 with heart and style.</div>
       </div>
       <div class="story-card active" data-category="film">
-        <img src="images/ghost-in-the-shell.jpg">
+        <img src="ghost in the shell.jpg">
         <h3>Ghost in the Shell</h3>
         <small>Mamoru Oshii</small>
         <div class="card-overlay">A philosophical dive into cybernetic identity.</div>
       </div>
       <div class="story-card active" data-category="film">
-        <img src="images/pluto.jpg">
+        <img src="pluto.jpg">
         <h3>PLUTO</h3>
         <small>Naoki Urasawa / Netflix</small>
         <div class="card-overlay">A noir robot drama reimagining Astro Boy's greatest story arc.</div>
@@ -261,7 +261,7 @@
 
       <!-- Other -->
       <div class="story-card active" data-category="other">
-        <img src="images/neon-rising.png">
+        <img src="neon rising.png">
         <h3>Neon_Rising</h3>
         <small>The_Future_is_Now</small>
         <div class="card-overlay">A cyberpunk narrative art book blending visuals and lore.</div>
