--- a/staffpicks.html
+++ b/staffpicks.html
@@ -159,7 +159,7 @@
     <div class="story-grid" id="picks">
       <!-- Games -->
       <div class="story-card active" data-category="games">
-        <img src="CS keyart.png">
+        <img src="CS Keyart.png">
         <h3>Citizen Sleeper</h3>
         <small>Jump Over the Age / Fellow Traveller</small>
         <div class="card-overlay">A narrative RPG set in a post-capitalist space station.</div>
