--- a/staffpicks.html
+++ b/staffpicks.html
@@ -247,7 +247,7 @@
         <div class="card-overlay">An anime spinoff of Cyberpunk 2077 with heart and style.</div>
       </div>
       <div class="story-card active" data-category="film">
-        <img src="Ghost In The Shell.jpg">
+        <img src="Ghost in the Shell.jpg">
         <h3>Ghost in the Shell</h3>
         <small>Mamoru Oshii</small>
         <div class="card-overlay">A philosophical dive into cybernetic identity.</div>
