--- a/staffpicks.html
+++ b/staffpicks.html
@@ -253,7 +253,7 @@
         <div class="card-overlay">A philosophical dive into cybernetic identity.</div>
       </div>
       <div class="story-card active" data-category="film">
-        <img src="Pluto.jpg">
+        <img src="PLUTO.jpg">
         <h3>PLUTO</h3>
         <small>Naoki Urasawa / Netflix</small>
         <div class="card-overlay">A noir robot drama reimagining Astro Boy's greatest story arc.</div>
