--- a/art.html
+++ b/art.html
@@ -299,6 +299,7 @@
       <div></div>
     </div>
     <nav class="site-nav" id="site-nav">
+      <a href="index.html">Home</a>
       <a href="fiction.html">Fiction</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
