--- a/staffpicks.html
+++ b/staffpicks.html
@@ -166,19 +166,13 @@
         <img src="CS Keyart.png">
         <h3>Citizen Sleeper</h3>
         <small>Jump Over the Age / Fellow Traveller</small>
-        <div class="card-overlay">A narrative RPG set in a post-capitalist space station.</div>
-      </div>
-      <div class="story-card" data-category="games">
-        <img src="The Ascent Keyart.jpg">
-        <h3>The Ascent</h3>
-        <small>Neon Giant</small>
-        <div class="card-overlay">A twin-stick action RPG set in a cyberpunk megacity.</div>
+        <div class="card-overlay">Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.</div>
       </div>
       <div class="story-card" data-category="games">
         <img src="Ruiner Keyart.jpg">
         <h3>Ruiner</h3>
         <small>Reikon Games</small>
-        <div class="card-overlay">A brutal action shooter set in the year 2091.</div>
+        <div class="card-overlay">If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.</div>
       </div>
       <div class="story-card" data-category="games">
         <img src="Ghostrunner Keyart.jpg">
