--- a/staffpicks.html
+++ b/staffpicks.html
@@ -178,31 +178,31 @@
         <img src="Ghostrunner Keyart.jpg">
         <h3>Ghostrunner</h3>
         <small>One More Level</small>
-        <div class="card-overlay">A lightning-fast slasher set in a dystopian tower city.</div>
+        <div class="card-overlay">Like the sword parts of cyberpunk? Place this game.</div>
       </div>
       <div class="story-card" data-category="games">
         <img src="CP2077 Keyart.jpg">
         <h3>Cyberpunk 2077</h3>
         <small>CD Projekt Red</small>
-        <div class="card-overlay">An open-world RPG set in Night City.</div>
+        <div class="card-overlay">We'd love to have a clickier take, but it really is as good as advertised. We'd also imagine you wouldn't be on this website without already having played this game.</div>
       </div>
       <div class="story-card" data-category="games">
         <img src="Cloudpunk Keyart.jpg">
         <h3>Cloudpunk</h3>
         <small>ION Lands</small>
-        <div class="card-overlay">A neon-soaked delivery game through a vertical city.</div>
+        <div class="card-overlay">Live out your cyberpunk delivery boy fantasy. Something about pixel art and neon works really, really well, too.</div>
       </div>
       <div class="story-card" data-category="games">
         <img src="Transistor Keyart.jpg">
         <h3>Transistor</h3>
         <small>Supergiant Games</small>
-        <div class="card-overlay">A sci-fi action RPG with rich strategy and art.</div>
+        <div class="card-overlay">You like Hades? Great news: those folks made a cyberpunk game.</div>
       </div>
       <div class="story-card" data-category="games">
         <img src="FC3 Blood Dragon.jpg">
         <h3>Far Cry 3: Blood Dragon</h3>
         <small>Ubisoft</small>
-        <div class="card-overlay">A retro-futuristic parody of '80s action games.</div>
+        <div class="card-overlay">Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody matches that speed.</div>
       </div>
 
       <!-- Books -->
