--- a/staffpicks.html
+++ b/staffpicks.html
@@ -202,7 +202,7 @@
         <img src="FC3 Blood Dragon.jpg">
         <h3>Far Cry 3: Blood Dragon</h3>
         <small>Ubisoft</small>
-        <div class="card-overlay">Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody matches that speed.</div>
+        <div class="card-overlay">Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.</div>
       </div>
 
       <!-- Books -->
